added tailwind and a new test

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,15 @@
   </head>
 
   <body>
-    <main>
-      <h1>
+    <header class="border-2 border-orange-700 p-4 m-4 bg-orange-200/50">
+      <h1 class="text-gray">
         ToDo list for: James-Zebedee
       </h1>
+    </header>
+    <nav class="border-2 border-blue-700 p-10 m-4 bug-blue-300">
+    </nav>
+    <main class="border-2 border-green-700 p-50 m-4 bg-green-200/50">
+      <h1>Totally gonna have a check list here soon</h1>
     </main>
   </body>
 
