--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Todo List or Bible Vision</title>
+    <title>James-Zebedee</title>
 
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="stylesheet" href="/style.css">
@@ -14,13 +14,22 @@
   </head>
 
   <body>
-    <header class="border-2 border-orange-700 p-4 m-4 bg-orange-200/50">
-      <h1 class="text-gray">
-        ToDo list for: James-Zebedee
-      </h1>
+    <header class="sticky top-0 z-50 flex items-center justify-between px-6 py-3 bg-slate-100 border-b border-slate-300 shadow-sm">
+      <div class="flex items-center gap-3">
+        <h1 class="text-2xl font-bold font-sans text-slate-800 tracking-tight">
+          James' To-Dos
+        </h1>
+      </div>
+
+      <nav class="flex items-center gap-4 text-sm font-medium font-sans text-slate-700">
+        <a href="#" class="hover:text-slate-950 transition">Home</a>
+        <a href="#" class="hover:text-slate-950 transition">Projects</a>
+        <a href="#" class="hover:text-slate-950 transition">About</a>
+        <button class="px-3 py-1.5 rounded-lg bg-slate-800 text-white hover:bg-slate-700 transition">
+          Log In
+        </button>
+      </nav>
     </header>
-    <nav class="border-2 border-blue-700 p-10 m-4 bug-blue-300">
-    </nav>
     <main class="border-2 border-green-700 p-50 m-4 bg-green-200/50">
       <h1>Totally gonna have a check list here soon</h1>
     </main>
