--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,30 @@
     </header>
     <div class="flex-1 flex overflow-hidden min-h-0">
       <!-- Left column: fixed width; scrolls independently -->
-      <nav class="w-80 shrink-0 border-r bg-green-100 p-4 overflow-y-auto"></nav>
-      <main class="bg-orange-100 w-full min-h-20"></main>
+      <nav class="w-80 shrink-0 border-r bg-green-100 p-4 overflow-y-auto">
+        <section class="space-y-4">
+          <h2 class="text-sm font-semibold">Add item</h2>
+          <input
+            id="newText"
+            type="text"
+            placeholder="New todo..."
+            class="w-full rounded border border-gray-300 p-2 text-sm"
+          />
+          <div class="flex items-center gap-2">
+            <input id="newDone" type="checkbox" class="h-4 w-4" />
+            <label for="newDone" class="text-sm text-gray-700">done</label>
+          </div>
+          <button id="btnAdd" class="w-full px-3 py-2 rounded bg-blue-600 text-white">
+            Add item
+          </button>
+        </section>
+      </nav>
+      <main class="bg-orange-100 w-full min-h-20 p-4">
+        <pre
+          id="output"
+          class="m-0 rounded border border-gray-300 bg-white p-3 font-mono text-sm whitespace-pre-wrap break-words"
+        ></pre>
+      </main>
     </div>
   </body>
 </html>
