--- a/public/index.html
+++ b/public/index.html
@@ -18,29 +18,101 @@
     </header>
     <div class="flex-1 flex overflow-hidden min-h-0">
       <!-- Left column: fixed width; scrolls independently -->
-      <nav class="w-80 shrink-0 border-r bg-green-100 p-4 overflow-y-auto">
-        <section class="space-y-4">
-          <h2 class="text-sm font-semibold">Add item</h2>
+      <nav class="w-70 shrink-0 border-r bg-green-100 p-4 overflow-y-auto">
+        <div class="grid grid-cols-2 gap-2">
+            <!-- <button id="btnHealth" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
+              Health Check
+            </button>
+            <button id="btnStats" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
+              Stats
+            </button> -->
+            <button id="btnListAll" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
+              List All
+            </button>
+          </div>
+      <!-- Inputs -->
+        <section class="space-y-2 mt-4">
+          <h2 class="text-xs font-semibold uppercase tracking-wide text-gray-600">Inputs</h2>
+          <label for="textInp" class="text-sm text-gray-700 mt-2">Text</label>
           <input
-            id="newText"
+            id="textInp"
             type="text"
-            placeholder="New todo..."
+            placeholder="Buy milk"
             class="w-full rounded border border-gray-300 p-2 text-sm"
           />
+
           <div class="flex items-center gap-2">
-            <input id="newDone" type="checkbox" class="h-4 w-4" />
-            <label for="newDone" class="text-sm text-gray-700">done</label>
+            <input id="doneChk" type="checkbox" class="h-4 w-4" />
+            <label for="doneChk" class="text-sm text-gray-700">Done</label>
           </div>
-          <button id="btnAdd" class="w-full px-3 py-2 rounded bg-blue-600 text-white">
-            Add item
+          
+          <label for="idInp" class="text-sm text-gray-700">Item id</label>
+          <input
+            id="idInp"
+            type="number"
+            min="1"
+            step="1"
+            placeholder="123"
+            class="w-full rounded border border-gray-300 p-2 text-sm"
+          />
+
+          <label for="qInp" class="text-sm text-gray-700 mt-2">Filter Items by Name</label>
+          <input
+            id="qInp"
+            type="text"
+            placeholder="milk"
+            class="w-full rounded border border-gray-300 p-2 text-sm"
+          />
+        </section>
+      <section class="space-y- mt-6">
+          <h2 class="text-xs font-semibold uppercase tracking-wide text-gray-600">Actions</h2>
+          <div class="grid grid-cols-2 gap-2">
+            <button
+              id="btnGet"
+              class="px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+            >
+              Get Item
+            </button>
+            <button
+              id="btnAdd"
+              class="px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+              title="Uses text + done"
+            >
+              Add Item
+            </button>
+            <button
+              id="btnUpdate"
+              class="px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+              title="Uses id + text and/or done"
+            >
+              Update Item
+            </button>
+            <button
+              id="btnDelete"
+              class="px-3 py-2 rounded border border-red-700 text-red-700 bg-white"
+              title="Uses id"
+            >
+              Delete Item
+            </button>
+             <section class="space-y-2 mt-6">
+          <h2 class="text-xs font-semibold uppercase tracking-wide text-gray-600">Bulk</h2>
+          <button
+            id="btnClearCompleted"
+            class="w-full px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+          >
+            Clear Completed Items
           </button>
         </section>
+          </div>
+        </section>
       </nav>
-      <main class="bg-orange-100 w-full min-h-20 p-4">
+      <main class="flex-1 p-4 overflow-y-auto bg-purple-200 min-h-0">
         <pre
-          id="output"
+          id="out"
           class="m-0 rounded border border-gray-300 bg-white p-3 font-mono text-sm whitespace-pre-wrap break-words"
-        ></pre>
+        >
+{ "hint": "Click a button to call the API. On load we fetch /api/health and /api/list." }</pre
+        >
       </main>
     </div>
   </body>
