--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,14 @@
   </head>
   <body class="min-h-screen bg-gray-50 text-gray-900 flex flex-col">
     <!-- Header -->
-    <header class="flex-none border-b bg-white">
+    <header class="flex-none border-b bg-white sticky top-0 z-20 border-b-2">
       <div class="px-4 py-3">
-        <h1 class="text-xl font-semibold">ToDo List</h1>
-        <p class="text-sm text-gray-600">Build your own UI using the JSON API.</p>
+        <h1 class="text-xl font-semibold">To Do</h1>
       </div>
     </header>
     <div class="flex-1 flex overflow-hidden min-h-0">
       <!-- Left column: fixed width; scrolls independently -->
-      <nav class="w-70 shrink-0 border-r bg-green-100 p-4 overflow-y-auto">
+      <nav class="w-90 shrink-0 border-r border-black-100 border-r-2 bg-gray-200 p-4 overflow-y-auto">
         <div class="grid grid-cols-2 gap-2">
             <!-- <button id="btnHealth" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
               Health Check
@@ -46,7 +45,7 @@
             <label for="doneChk" class="text-sm text-gray-700">Done</label>
           </div>
           
-          <label for="idInp" class="text-sm text-gray-700">Item id</label>
+          <label for="idInp" class="text-sm text-gray-700">Item Number</label>
           <input
             id="idInp"
             type="number"
@@ -56,14 +55,34 @@
             class="w-full rounded border border-gray-300 p-2 text-sm"
           />
 
-          <label for="qInp" class="text-sm text-gray-700 mt-2">Filter Items by Name</label>
+          <label for="qInp" class="text-sm text-gray-700 mt-2">Query</label>
           <input
             id="qInp"
             type="text"
             placeholder="milk"
             class="w-full rounded border border-gray-300 p-2 text-sm"
           />
+          <button
+              id="btnListQuery"
+              class="px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+            >
+              Search
+            </button>
         </section>
+      <div class="grid grid-cols-3 gap-2 mt-2 p-2">
+            <button
+              id="btnListOpen"
+              class="px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+            >
+              List Incomplete
+            </button>
+            <button
+              id="btnListDone"
+              class="px-3 py-2 rounded border border-blue-700 text-blue-700 bg-white"
+            >
+              List Done
+            </button>
+          </div>
       <section class="space-y- mt-6">
           <h2 class="text-xs font-semibold uppercase tracking-wide text-gray-600">Actions</h2>
           <div class="grid grid-cols-2 gap-2">
@@ -106,12 +125,13 @@
           </div>
         </section>
       </nav>
-      <main class="flex-1 p-4 overflow-y-auto bg-purple-200 min-h-0">
+      <main class="flex-1 p-4 overflow-y-auto bg-blue-200 min-h-0">
         <pre
           id="out"
-          class="m-0 rounded border border-gray-300 bg-white p-3 font-mono text-sm whitespace-pre-wrap break-words"
+          class="m-0 rounded border border-gray-300 bg-white p-3 font-mono text-sm break-words"
         >
-{ "hint": "Click a button to call the API. On load we fetch /api/health and /api/list." }</pre
+          { "hint": "Click a button to call the API. On load we fetch /api/health and /api/list." }
+        </pre
         >
       </main>
     </div>
