--- a/public/index.html
+++ b/public/index.html
@@ -11,25 +11,32 @@
   <body class="min-h-screen bg-gray-50 text-gray-900 flex flex-col">
     <!-- Header -->
     <header class="flex-none border-b bg-white sticky top-0 z-20 border-b-2">
-      <div class="px-4 py-3">
+      <div class="px-4 py-3 flex items-center justify-between">
         <h1 class="text-xl font-semibold">To Do</h1>
+        <button
+          id="toggleNavBtn"
+          class="px-3 py-1 rounded border border-gray-300 text-gray-700 bg-white hover:bg-gray-100"
+          title="Toggle sidebar"
+        >
+          ☰
+        </button>
       </div>
     </header>
     <div class="flex-1 flex overflow-hidden min-h-0">
       <!-- Left column: fixed width; scrolls independently -->
-      <nav class="w-90 shrink-0 border-r border-black-100 border-r-2 bg-gray-200 p-4 overflow-y-auto">
+      <nav id="sideNav" class="w-90 shrink-0 border-r border-black-100 border-r-2 bg-gray-200 p-4 overflow-y-auto">
         <div p-2>
           <label class="text-xl font-semibold tracking-wide text-gray-700 py-3 px-2 mb-3">
             Tools
           </label>
         </div>
         <div class="grid grid-cols-2 gap-2">
-            <!-- <button id="btnHealth" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
+            <button id="btnHealth" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
               Health Check
             </button>
             <button id="btnStats" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
               Stats
-            </button> -->
+            </button>
             <button id="btnListAll" class="px-3 py-2 rounded bg-blue-700 text-white cursor-pointer">
               List All
             </button>
